--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -86,5 +86,6 @@ jobs:
           --min-instances=1 \
           --memory=1Gi \
           --source=gs://cf-imessage-code/twilio.zip \
-          --set-env-vars URL=${{secrets.URL}} \ 
+          --set-env-vars BB_URL=${{secrets.BB_URL}} \ 
+          --set-env-vars PW=${{secrets.PW}} \ 
           --set-env-vars SENDER=${{secrets.SENDER}}"
